# Nova

./: .gitignore  CMakeLists.txt  README.md  install.ps1  install.sh  nova.rb
docs/: getting-started.html  index.html  packages.html  stdlib.html  styles.css
examples/: calculator.nova  classes.nova  csv_processor.nova  dicts.nova  fibonacci.nova  file_organizer.nova  fizzbuzz.nova  game_3d.nova  game_hello.nova  game_pong.nova  guessing_game.nova  hello.nova  interpolation.nova  lambdas.nova  lists.nova  pipes.nova  ternary.nova  todo.nova  trycatch.nova  web_request.nova
include/: nova.h  nova_ast.h  nova_builtins.h  nova_common.h  nova_env.h  nova_error.h  nova_interpreter.h  nova_lexer.h  nova_memory.h  nova_module.h  nova_object.h  nova_parser.h  nova_table.h  nova_token.h  nova_value.h
src/: ast.c  builtins.c  env.c  error.c  interpreter.c  lexer.c  main.c  memory.c  module.c  object.c  parser.c  table.c  token.c  value.c
stdlib/: CMakeLists.txt  collections.c  csv.c  datetime.c  game.c  http.c  io.c  json.c  math.c  os.c  path.c  random.c  regex.c  string.c
